--- a/index.html
+++ b/index.html
@@ -1,12 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--css custom-->
+    <link rel="stylesheet" href="./style/style.css">
 </head>
-<body> 
-    
+
+<body>
+
+    <span class="fa title-open-right-sidebar tooltipstered fa-angle-double-right"></span>
+    </div>
+
+    <div id="right-sidebar" class="right-sidebar-notifcations nav-collapse">
+        <div class="bs-example bs-example-tabs right-sidebar-tab-notification" data-example-id="togglable-tabs">
+
+            <div id="w3lDemoBar" class="w3l-demo-bar">
+                <div class="demo-btns">
+                    <a href="#">
+                        <span class="w3l-icon -back">
+                            <span class="fa fa-arrow-left"></span>
+                        </span>
+                        <span class="w3l-text">Back</span>
+                    </a>
+                    <a href="#">
+                        <span class="w3l-icon -download">
+                            <span class="fa fa-download"></span>
+                        </span>
+                        <span class="w3l-text">Download</span>
+                    </a>
+                    <a href="#" class="no-margin-bottom-mobile">
+                        <span class="w3l-icon -buy">
+                            <span class="fa fa-shopping-cart"></span>
+                        </span>
+                        <span class="w3l-text">Buy</span>
+                    </a>
+                </div>
+
+            </div>
+            <div class="right-sidebar-panel-content animated fadeInRight" tabindex="5003"
+                style="overflow: hidden; outline: none;">
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <!--header-->
+    <header id="site-header" class="fixed-top">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg stroke">
+                <h1><a class="navbar-brand" href="index.html">
+                        Pooch Care
+                    </a></h1>
+
+                <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
+                    data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
+                    <span class="navbar-toggler-icon fa icon-close fa-times"></span>
+                    </span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Blog<span class="fa fa-angle-down"></span>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                <a class="dropdown-item" href="blog.html">Blog Posts</a>
+                                <a class="dropdown-item" href="blog-single.html">Blog single</a>
+                                <a class="dropdown-item" href="landing-single.html">Landing Page</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- main-slider -->
+
+
+
+
+                <!-- /main-slider -->
+
+                <!--list-->
+                <section class="w3l-features py-5" id="features">
+                    <div class="container py-lg-5 py-md-4">
+                        <div class="grids-area-hny main-cont-wthree-fea row">
+                            <div class="col-lg-4 col-sm-6 grids-feature">
+                                <div class="area-box">
+                                    <div class="icon">
+                                        <span class="fa fa-snowflake-o"></span>
+                                    </div>
+                                    <h4><a href="#feature" class="title-head">Dog Walking</a></h4>
+                                    <p>Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem
+                                        ipsum dolor sit amet Ut blandit eu leo.</p>
+                                    <a href="#read" class="read">Read more</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 grids-feature mt-sm-0">
+                                <div class="area-box mb-lg-0">
+                                    <div class="icon">
+                                        <span class="fa fa-cutlery"></span>
+                                    </div>
+                                    <h4><a href="#feature" class="title-head">Healthy Meals</a></h4>
+                                    <p>Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem
+                                        ipsum dolor sit amet Ut blandit eu leo.</p>
+                                    <a href="#read" class="read">Read more</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 grids-feature mt-lg-0">
+                                <div class="area-box mb-lg-0">
+                                    <div class="icon">
+                                        <span class="fa fa-sign-language"></span>
+                                    </div>
+                                    <h4><a href="#feature" class="title-head">Pet Sitting</a></h4>
+                                    <p>Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem
+                                        ipsum dolor sit amet Ut blandit eu leo.</p>
+                                    <a href="#read" class="read">Read more</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 grids-feature">
+                                <div class="area-box">
+                                    <div class="icon">
+                                        <span class="fa fa-sitemap"></span>
+                                    </div>
+                                    <h4><a href="#feature" class="title-head">Dog Activities</a></h4>
+                                    <p>Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem
+                                        ipsum dolor sit amet Ut blandit eu leo.</p>
+                                    <a href="#read" class="read">Read more</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 grids-feature mt-sm-0">
+                                <div class="area-box mb-lg-0">
+                                    <div class="icon">
+                                        <span class="fa fa-shower"></span>
+                                    </div>
+                                    <h4><a href="#feature" class="title-head">Pet Daycare</a></h4>
+                                    <p>Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem
+                                        ipsum dolor sit amet Ut blandit eu leo.</p>
+                                    <a href="#read" class="read">Read more</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 grids-feature mt-lg-0">
+                                <div class="area-box">
+                                    <div class="icon">
+                                        <span class="fa fa-user-md"></span>
+                                    </div>
+                                    <h4><a href="#feature" class="title-head">Pet Grooming</a></h4>
+                                    <p>Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem
+                                        ipsum dolor sit amet Ut blandit eu leo.</p>
+                                    <a href="#read" class="read">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!--list-->
+
+
+                <!--munber-->
+                <section class="w3l-stats py-5" id="stats">
+                    <div class="gallery-inner container py-lg-0 py-3">
+                        <div class="row stats-con pb-lg-3">
+                            <div class="col-lg-3 col-6 stats_info counter_grid">
+                                <p class="counter">730</p>
+                                <h4>Happy Clients</h4>
+                            </div>
+                            <div class="col-lg-3 col-6 stats_info counter_grid1">
+                                <p class="counter">80</p>
+                                <h4>Professionals</h4>
+                            </div>
+                            <div class="col-lg-3 col-6 stats_info counter_grid mt-lg-0 mt-5">
+                                <p class="counter">812</p>
+                                <h4>Adopted Pets</h4>
+                            </div>
+                            <div class="col-lg-3 col-6 stats_info counter_grid2 mt-lg-0 mt-5">
+                                <p class="counter">90</p>
+                                <h4>Awards</h4>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <script src="./js/main.js"></script>
 </body>
+
 </html>
