--- a/index.html
+++ b/index.html
@@ -96,10 +96,23 @@
                 </div>
 
                 <!-- main-slider -->
-
-
-
-
+                <!-- about us -->
+    <section class="w3l-grids-3 py-5" id="about">
+        <div class="container py-md-5 py-3">
+            <div class="bottom-ab-grids align-items-center">
+                <div class="bottom-ab-left">
+                    <h6 class="sub-title">About Us</h6>
+                    <h3 class="hny-title">We love your pets like they are our own</h3>
+                    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio
+                        voluptatem tenetur consequatur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+                        posuere cubilia Curae; Nulla mollis dapibus nunc, ut
+                        rhoncus turpis sodales quis. </p>
+                    <a href="#read" class="read">Read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about us -->
                 <!-- /main-slider -->
 
                 <!--list-->
@@ -176,7 +189,35 @@
                     </div>
                 </section>
                 <!--list-->
+                    <!--/services-->
+        <section class="w3l-services1">
+            <div id="content-with-photo4-block" class="py-5">
+                <div class="container py-md-5 py-3">
+                    <div class="cwp4-two row">
+                        <div class="cwp4-image col-lg-6 pl-lg-5 mb-lg-0 mb-5">
+                            <img src="assets/images/ab.jpg" class="img-curve img-fluid" alt="" />
+                        </div>
+                        <div class="cwp4-text col-lg-6">
+                            <h6 class="sub-title">Why Choose Us</h6>
+                            <h3 class="hny-title">What We Offer for You</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.Lorem ipsum dolor sit amet, consectetur adipisicingelit,
+                            </p>
 
+                            <ul class="cont-4">
+                                <li><span class="fa fa-check"></span>Certified Groomer</li>
+                                <li><span class="fa fa-check"></span>10 Years of Experience</li>
+                                <li><span class="fa fa-check"></span>Pet Lover</li>
+                                <li><span class="fa fa-check"></span>Customer Supports</li>
+                                <li><span class="fa fa-check"></span>Veterinary Help</li>
+
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--//services-->
 
                 <!--munber-->
                 <section class="w3l-stats py-5" id="stats">
@@ -201,7 +242,123 @@
                         </div>
                     </div>
                 </section>
+                
+            <!-- pricing -->
+    <section class="w3l-pricing-7-main py-5" id="pricing">
+        <div class="pricing-7-sec pt-lg-4 pt-md-3 pb-lg-5 pb-md-4">
+            <div class="container pricing-grid">
+                <div class="heading text-center mx-auto">
+                    <h6 class="sub-title">Our Plans</h6>
+                    <h3 class="hny-title mb-5">Affordable Packages</h3>
+                </div>
+                <div class="pricing-sec-7">
+                    <div class="pricing-gd-left pric-7-1">
+                        <div class="w3l-pricing-7">
+                            <div class="w3l-pricing-7-top">
+                                <h6 class="one-light">Free Package</h6>
 
+                                <h4><label>$</label>0<span>/month</span></h4>
+                            </div>
+                            <div class="w3l-pricing-7-bottom">
+                                <div class="w3l-pricing-7-bottom-bottom">
+                                    <ul class="links">
+                                        <li>
+                                            <p class="lists">5 Dog Walk </p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">3 Vet Visit </p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">3 Pet Spa</p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">Free Supports</p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">Customer Support</p>
+                                        </li>
+
+                                    </ul>
+                                </div>
+                                <div class="buy-button">
+                                    <a class="popup btn btn-style btn-primary" href="#buy">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pricing-gd-left pric-7 active">
+                        <div class="w3l-pricing-7">
+                            <div class="w3l-pricing-7-top">
+                                <h5>Save 10% </h5>
+                                <h6>Standard Package</h6>
+
+                                <h4><label>$</label>39<span>/month</span></h4>
+                            </div>
+                            <div class="w3l-pricing-7-bottom">
+                                <div class="w3l-pricing-7-bottom-bottom">
+                                    <ul class="links">
+                                        <li>
+                                            <p class="lists">5 Dog Walk </p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">3 Vet Visit </p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">3 Pet Spa</p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">Free Supports</p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">Customer Support</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="buy-button">
+                                    <a class="popup btn btn-style btn-primary" href="#buy">Get Started</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pricing-gd-left pric-7-2">
+                        <div class="w3l-pricing-7">
+                            <div class="w3l-pricing-7-top">
+                                <h6 class="one-light">Pro Package</h6>
+
+                                <h4><label>$</label>89<span>/month</span></h4>
+                            </div>
+                            <div class="w3l-pricing-7-bottom">
+                                <div class="w3l-pricing-7-bottom-bottom">
+                                    <ul class="links">
+                                        <li>
+                                            <p class="lists">5 Dog Walk </p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">3 Vet Visit </p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">3 Pet Spa</p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">Free Supports</p>
+                                        </li>
+                                        <li>
+                                            <p class="lists line-through">Customer Support</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="buy-button">
+                                    <a class="popup btn-style btn-primary" href="#buy">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- pricing -->
                 <script src="./js/main.js"></script>
 </body>
 
